@@ -17,6 +17,12 @@ Applications
  * Record application now has an option 'o' which allows 0 to act as an exit
    key setting the RECORD_STATUS variable to 'OPERATOR' instead of 'DTMF'
 
+Functions
+--------------------------
+ * A new function was added: PERIODIC_HOOK.  This allows running a periodic
+   dialplan hook on a channel.  Any audio generated by this hook will be
+   injected into the call.
+
 ChanSpy
 --------------------------
  * ChanSpy now accepts a channel uniqueid or a fully specified channel name
